# whisperscript

./: .gitignore  CLAUDE.md  Info.plist  README.md  build_backend.py  pyproject.toml
src/swift/: Package.swift
src/swift/Sources/AudioService/: main.swift
src/swift/Sources/AudioServiceLib/: AudioRecognitionService.swift
src/swift/Sources/WhisperScript/: AudioRecognitionService.swift  main.swift
src/whisperscript/: __init__.py  main.py
src/whisperscript/audio/: capture.py
src/whisperscript/automation/: __init__.py
tests/: test_audio_capture.py
tests/data/: README.md  test01.m4a  test02.m4a
